[tool.poetry]
name = "air-quality-time-series"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
prophet = "^1.1.6"
nbformat = ">=4.2.0"
plotly = "^5.24.1"
statsmodels = "^0.14.4"
numpy = "1.26.4"
darts = "0.29.0"
nbdime = "^4.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
